# cpp-bluetooth

./: CMakeLists.txt  main.cpp
include/: device-finder.h  device-handler.h
src/: device-finder.cpp  device-handler.cpp
